Trying to fix iPhone overflow part XXXX

--- a/static/style.css
+++ b/static/style.css
@@ -40,6 +40,7 @@ a {
 
 #container {
 	display: flex;
+    flex-wrap: wrap;
 	justify-content: center;
 }
 
